// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OcTile component renders default space correctly 1`] = `
<div class="oc-tile-card oc-card oc-card-default oc-rounded">
  <resource-link-stub class="oc-card-media-top oc-flex oc-flex-center oc-flex-middle oc-m-rm" folderlink="[object Object]" isresourceclickable="true" resource="[object Object]" tabindex="-1">
    <div class="oc-tile-card-selection"></div>
    <!--v-if-->
    <div class="oc-tile-card-preview oc-flex oc-flex-middle oc-flex-center">
      <div class="oc-tile-card-hover"></div>
      <resource-icon-stub class="tile-default-image oc-pt-xs" resource="[object Object]" size="xlarge"></resource-icon-stub>
    </div>
  </resource-link-stub>
  <div class="oc-card-body oc-p-s">
    <div class="oc-flex oc-flex-between oc-flex-middle">
      <div class="oc-flex oc-flex-middle oc-text-truncate resource-name-wrapper">
        <resource-list-item-stub folderlink="[object Object]" isextensiondisplayed="true" isicondisplayed="false" ispathdisplayed="false" isresourceclickable="true" isthumbnaildisplayed="true" parentfolderlinkiconadditionalattributes="[object Object]" parentfoldername="" pathprefix="" resource="[object Object]"></resource-list-item-stub>
      </div>
      <div class="oc-flex oc-flex-middle">
        <!-- Slot for individual actions -->
        <!-- Slot for contextmenu -->
      </div>
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`OcTile component renders disabled space correctly 1`] = `
<div class="oc-tile-card oc-card oc-card-default oc-rounded state-trashed">
  <resource-link-stub class="oc-card-media-top oc-flex oc-flex-center oc-flex-middle oc-m-rm" folderlink="[object Object]" isresourceclickable="true" resource="[object Object]" tabindex="-1">
    <div class="oc-tile-card-selection"></div>
    <oc-tag-stub class="resource-disabled-indicator oc-position-absolute" rounded="false" size="medium" type="span">
      <span>Disabled</span>
    </oc-tag-stub>
    <div class="oc-tile-card-preview oc-flex oc-flex-middle oc-flex-center">
      <div class="oc-tile-card-hover"></div>
      <resource-icon-stub class="tile-default-image oc-pt-xs" resource="[object Object]" size="xlarge"></resource-icon-stub>
    </div>
  </resource-link-stub>
  <div class="oc-card-body oc-p-s">
    <div class="oc-flex oc-flex-between oc-flex-middle">
      <div class="oc-flex oc-flex-middle oc-text-truncate resource-name-wrapper">
        <resource-list-item-stub folderlink="[object Object]" isextensiondisplayed="true" isicondisplayed="false" ispathdisplayed="false" isresourceclickable="true" isthumbnaildisplayed="true" parentfolderlinkiconadditionalattributes="[object Object]" parentfoldername="" pathprefix="" resource="[object Object]"></resource-list-item-stub>
      </div>
      <div class="oc-flex oc-flex-middle">
        <!-- Slot for individual actions -->
        <!-- Slot for contextmenu -->
      </div>
    </div>
    <!--v-if-->
  </div>
</div>
`;
